<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/uibg"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/doctormanagementtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/amarante"
        android:gravity="center_horizontal"
        android:text="@string/doctor_management"
        android:textColor="@color/font"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginBottom="120dp"/>

    <Button
        android:id="@+id/addDoctorButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:padding="12dp"
        android:text="@string/add_doctor"
        android:backgroundTint="@color/button"
        android:textColor="@color/black"
        android:fontFamily="@font/amarante"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/updateDoctorButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:padding="12dp"
        android:text="@string/update_doctor"
        android:backgroundTint="@color/button"
        android:textColor="@color/black"
        android:fontFamily="@font/amarante"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/deleteDoctorButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:padding="12dp"
        android:text="@string/delete_doctor"
        android:backgroundTint="@color/button"
        android:textColor="@color/black"
        android:fontFamily="@font/amarante"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/assignRoomButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:padding="12dp"
        android:text="Assign Room"
        android:backgroundTint="@color/button"
        android:textColor="@color/black"
        android:fontFamily="@font/amarante"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"/>
</LinearLayout>
