<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/uibg"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_doctor"
            android:textSize="20sp"
            android:textColor="@color/font"
            android:textStyle="bold"
            android:fontFamily="@font/amarante"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp" />

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/doctor_name"
            android:fontFamily="@font/amarante"
            android:backgroundTint="@color/box"
            android:background="@color/box"
            android:textColorHint="@color/font"
            android:textColor="@color/font"
            android:padding="12dp"
            android:minHeight="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"/>

        <EditText
            android:id="@+id/specialtyInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amarante"
            android:hint="@string/specialty"
            android:backgroundTint="@color/box"
            android:background="@color/box"
            android:textColorHint="@color/font"
            android:textColor="@color/font"
            android:minHeight="48dp"
            android:padding="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"/>

        <EditText
            android:id="@+id/roomInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amarante"
            android:hint="@string/room_number"
            android:backgroundTint="@color/box"
            android:background="@color/box"
            android:textColorHint="@color/font"
            android:textColor="@color/font"
            android:padding="12dp"
            android:minHeight="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"/>

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amarante"
            android:hint="@string/email"
            android:backgroundTint="@color/box"
            android:background="@color/box"
            android:textColorHint="@color/font"
            android:textColor="@color/font"
            android:padding="12dp"
            android:minHeight="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"/>

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amarante"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:backgroundTint="@color/box"
            android:background="@color/box"
            android:textColorHint="@color/font"
            android:textColor="@color/font"
            android:padding="12dp"
            android:minHeight="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"/>

        <Button
            android:id="@+id/addDoctorButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:padding="12dp"
            android:text="@string/add_doctor"
            android:backgroundTint="@color/button"
            android:textColor="@color/black"
            android:fontFamily="@font/amarante"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"/>
    </LinearLayout>
</ScrollView>
