<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/uibg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_doctor_informations"
            android:textSize="20sp"
            android:textColor="@color/font"
            android:textStyle="bold"
            android:fontFamily="@font/amarante"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            />
        <TextView
            android:id="@+id/drop2TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select Doctor from following Dropdown Menu"
            android:textSize="14sp"
            android:textColor="@color/font"
            android:textStyle="bold"
            android:fontFamily="@font/amarante"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            />

        <Spinner
            android:id="@+id/doctorSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dropdown"
            android:backgroundTint="@color/dropdown"
            android:fontFamily="@font/amarante"
            android:minHeight="48dp"
            android:spinnerMode="dropdown"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amarante"
            android:hint="@string/doctor_name"
            android:backgroundTint="@color/box"
            android:background="@color/box"
            android:textColorHint="@color/font"
            android:textColor="@color/font"
            android:padding="12dp"
            android:layout_marginBottom="8dp"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/specialtyInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amarante"
            android:backgroundTint="@color/box"
            android:background="@color/box"
            android:textColorHint="@color/font"
            android:textColor="@color/font"
            android:padding="12dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/specialty"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/roomInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amarante"
            android:hint="@string/room_number"
            android:backgroundTint="@color/box"
            android:background="@color/box"
            android:textColorHint="@color/font"
            android:textColor="@color/font"
            android:padding="12dp"
            android:minHeight="48dp"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/updateDoctorButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:padding="12dp"
            android:text="Update"
            android:backgroundTint="@color/button"
            android:textColor="@color/black"
            android:fontFamily="@font/amarante"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp" />

        <TextView
            android:id="@+id/dropTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select Schdeuler from following Dropdown Menu"
            android:textSize="14sp"
            android:textColor="@color/font"
            android:textStyle="bold"
            android:fontFamily="@font/amarante"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            />

        <Spinner
            android:id="@+id/schedulerSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dropdown"
            android:backgroundTint="@color/dropdown"
            android:fontFamily="@font/amarante"
            android:hint="@string/select_scheduler"
            android:minHeight="48dp"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/assignSchedulerButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:padding="12dp"
            android:text="@string/assign_scheduler"
            android:backgroundTint="@color/button"
            android:textColor="@color/black"
            android:fontFamily="@font/amarante"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" />
    </LinearLayout>
</ScrollView>
